--- a/cart.html
+++ b/cart.html
@@ -676,8 +676,8 @@
        - App ID is safe to expose.
        - Location ID is safe to expose.
     ========================================================= */
-    const SQUARE_APP_ID = "REPLACE_WITH_YOUR_SQUARE_APP_ID";
-    const SQUARE_LOCATION_ID = "REPLACE_WITH_YOUR_SQUARE_LOCATION_ID";
+    const SQUARE_APP_ID = "sq0idp-Nnvnru9L9hR3CwVKikShGA";
+    const SQUARE_LOCATION_ID = "L4KPR2BE0PAA4";
 
     /* =========================================================
        Worker base (you moved it to api.unlim8ted.com)
@@ -1868,3 +1868,4 @@
 </body>
 
 </html>
+
